# snek3

./: .gitignore  dev.py  pyproject.toml  readme.md
eth_api_spec/: block.py  client.py  filter.py  hooks.py  transaction.py  types.py
eth_api_spec/eth/: block.py
eth_api_spec/methods/: block.py
eth_api_spec/rpc/: base.py  exceptions.py  method.py
eth_api_spec/types/: __init__.py  block.py  client.py  receipt.py  rpc.py  state.py  transaction.py
snek3/: __init__.py  hooks.py  main.py  rpc.py  utils.py
snek3/methods/: block.py  logs.py
snek3/rpc/: base.py  method.py
snek3/types/: base.py  block.py  client.py  filter.py  receipt.py  rpc.py  state.py  transaction.py
tests/: test_block.py
