[tool.poetry]
name = "eth-api-spec"
version = "0.1.0"
description = "msgspec definitions of ethereum execution client json-rpc api"
authors = ["banteg <banteg@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
msgspec = "^0.7.1"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
