[tool.poetry]
name = "snek3"
version = "0.1.0"
description = "msgspec definitions of ethereum execution client api"
authors = ["banteg <banteg@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
msgspec = { git = "https://github.com/jcrist/msgspec.git", branch = "main" }
hexbytes = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
