[tool.poetry]
name = "snek3"
version = "0.1.0"
description = "msgspec definitions of ethereum execution client api"
authors = ["banteg <banteg@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4"
msgspec = ">=0.16.0"
eth-utils = ">=2.1.1"
pysha3 = ">=1.0.2"
httpx = ">=0.24.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
typer = ">=0.9.0"
devtools = ">=0.11.0"
tqdm = ">=4.65.0"
ruff = ">=0.0.275"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
